--- a/index.html
+++ b/index.html
@@ -4,40 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- App Title -->
+    <!-- Application Title -->
     <title>Sweet Shop Management System</title>
 
-    <!-- SEO -->
+    <!-- Basic Meta -->
     <meta
       name="description"
-      content="Sweet Shop Management System is a full-stack web application for managing sweets inventory, purchases, and administration with secure authentication and role-based access."
+      content="Sweet Shop Management System for managing sweets inventory, purchases, and administration."
     />
     <meta name="author" content="Kalpana Dhiman" />
 
-    <!-- Open Graph (for link previews) -->
+    <!-- Open Graph -->
     <meta property="og:title" content="Sweet Shop Management System" />
     <meta
       property="og:description"
-      content="A modern Sweet Shop Management System with authentication, inventory management, and admin controls."
+      content="A full-stack Sweet Shop Management System with authentication and inventory management."
     />
     <meta property="og:type" content="website" />
 
-    <!-- Twitter Card -->
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Sweet Shop Management System" />
     <meta
       name="twitter:description"
-      content="Manage sweets inventory, purchases, and administration through a secure full-stack application."
+      content="Manage sweets inventory and purchases using a secure full-stack application."
     />
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
     <div id="root"></div>
-
-    <!-- React Entry -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
