Add favicon link to index.html
Added a favicon link to the HTML head section.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <!-- Application Title -->
     <title>Sweet Shop Management System</title>
+    <link rel="icon" href="data:," />
+
 
     <!-- Basic Meta -->
     <meta
